k8s/14-redis-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: redis
  namespace: class-exercise
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
