k8s/08-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: class-exercise
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
