k8s/10-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: class-exercise
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 3000
    targetPort: 3000
